@@ -1,2 +1,6 @@
-+ Added: API: PlayerRandomTeleportEvent: called whenever a player teleports via /lands wild
-- Fixed: [#2231] Being able to store tool in armor via 3rd party plugins in selection mode
++ Added: Option to disable relations
+    # Relations
+    relations:
+      # If you disable this option, all existing relations will be deleted.
+      # NOTE: This setting requires server reload / restart.
+      enabled_6: true
